--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "npm run server:build && rimraf dist && npm run build:init && parcel build index.html --public-url ./",
     "build:init": "./bin/update-version.sh && mkdir -p dist && cp -r public/* dist/ && npm run db:build",
+    "computeAggregated": "elm make src/ComputeAggregated.elm --output=compute-aggregated-app.js && node compute-aggregated.js",
     "db:build": "./bin/build-db",
     "format:json": "npx prettier@3.0.3 --write .",
     "format:check": "npx prettier@3.0.3 --check .",
@@ -17,7 +18,7 @@
     "server:debug": "elm make src/Server.elm --output=server-app.js && nodemon server.js --config nodemon.json",
     "server:start": "node server.js",
     "start:parcel": "parcel serve index.html --no-cache",
-    "start:dev": "npm run build:init && concurrently -n \"watch,parcel,server\" -c \"green,cyan\" \"npm run start:parcel\" \"npm run server:dev\"",
+    "start:dev": "npm run build:init && concurrently -n \"parcel,server\" -c \"green,cyan\" \"npm run start:parcel\" \"npm run server:dev\"",
     "start": "PARCEL_ELM_NO_DEBUG=1 npm run start:dev",
     "test:client": "npx elm-test",
     "test:review": "npx elm-review",
